@@ -53,13 +53,19 @@ static gboolean on_dialog_keypressed (GtkWidget *widget, GdkEventKey *event, gpo
         case GDK_Return:
         case GDK_KP_Enter:
             {
-                const gchar *new_fname = gtk_entry_get_text (dialog->priv->textbox);
+                gchar *new_fname = g_strdup (gtk_entry_get_text (dialog->priv->textbox));
                 GnomeVFSResult result = gnome_cmd_file_rename (dialog->priv->finfo, new_fname);
-                gnome_cmd_file_list_focus_file (gnome_cmd_main_win_get_fs (main_win, ACTIVE)->list, new_fname, TRUE);
+
+                if (result==GNOME_VFS_OK)
+                    gnome_cmd_file_list_focus_file (gnome_cmd_main_win_get_fs (main_win, ACTIVE)->list, new_fname, TRUE);
 
                 gnome_cmd_file_unref (dialog->priv->finfo);
                 gtk_widget_destroy (widget);
-                // TODO: if (ret != GNOME_VFS_OK)
+
+                if (result!=GNOME_VFS_OK)
+                    gnome_cmd_show_message (NULL, new_fname, gnome_vfs_result_to_string (result));
+
+                g_free (new_fname);
             }
             return TRUE;
 
